fixed dashboard new css alignment

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -69,6 +69,8 @@ body {
 	background-color:#E3E3E3;
 	margin-top: 80px;
 	padding: 40px 90px 40px 90px;
+  text-align: center;
+  width: 250px;
 }
 
 /* Snapshot
